--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <script src="res/input.js"></script>
 <script src="res/keyboard.js"></script>
 <script src="res/lib/math.min.js"></script>
+<script src="res/help.js"></script>
 <script src="res/plot.js"></script>
 <link rel="stylesheet" href="res/app.css">
 <link rel="stylesheet" href="res/input.css">
@@ -388,7 +389,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <span>2</span>
 <span>3</span>
 <button data-key="insert" data-val="&amp;">&amp;</button>
-<button data-key="insert" data-val="^">^</button>
+<button data-key="insert" data-val="bitXor(&#x1b;,)">bitXor</button>
 </div>
 
 <div class="keyboard-page"><!--10-->
