--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <button data-key="insert" data-val="cbrt(&#xa;)">cbrt</button>
 
 <button data-key="insert" data-val="simplify(&quot;&#xa;&quot;)">simplify</button>
+<button data-key="insert" data-val="rationalize(&quot;&#xa;&quot;)">rat’lize</button>
 <button data-key="insert" data-val="derivative(&quot;&#xa;&quot;,&quot;x&quot;)">deriv</button>
 <button data-key="insert" data-val="x">x</button>
 <div class="select"><label for="select-plot">plot…</label>
@@ -189,7 +190,6 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <option data-key="insert" data-val="plotPolar(&#xa;, phi, -2pi, 2pi)">plotPolar</option>
 <option data-key="insert" data-val="plotParametric(&#xa;, , t, 0, 10)">plotParametric</option>
 </select></div>
-<span>5</span>
 
 <button data-key="insert" data-val="fraction(&#xa;)">fraction</button>
 <button data-key="insert" data-val="bignumber(&quot;&#xa;&quot;)">big</button>
