--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <option data-key="insert" data-val="setIsSubset(&#xa;,)">setIsSubset</option>
 <option data-key="insert" data-val="setDistinct(&#xa;)">setDistinct</option>
 </select></div>
-<span>3</span>
+<button data-key="insert" data-val="distance(&#xa;)">distance</button>
 <button data-key="insert" data-val=";">;</button>
 <button data-key="insert" data-val=":">:</button>
 </div>
@@ -279,7 +279,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <button data-key="insert" data-val="resize(&#xa;,)">resize</button>
 <button data-key="insert" data-val="reshape(&#xa;,)">reshape</button>
 
-<button data-key="insert" data-val="distance(&#xa;)">distance</button>
+<button data-key="insert" data-val="getMatrixDataType(&#xa;)">getMDT</button>
 <button data-key="insert" data-val="intersect(&#xa;,,)">intersect</button>
 <button data-key="insert" data-val="flatten(&#xa;)">flatten</button>
 <button data-key="insert" data-val="squeeze(&#xa;)">squeeze</button>
