--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <option data-key="insert" data-val="isNumeric(&#xa;)">isNumeric</option>
 <option data-key="insert" data-val="isInteger(&#xa;)">isInteger</option>
 <option data-key="insert" data-val="isNaN(&#xa;)">isNaN</option>
+<option data-key="insert" data-val="hasNumericValue(&#xa;)">hasNumericValue</option>
 </select></div>
 <button data-key="insert" data-val="typeof(&#xa;)">typeof</button>
 <div class="select"><label for="select-comp">comp/…</label>
