--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <button data-key="insert" data-val="mean(&#xa;)">mean</button>
 <button data-key="insert" data-val="median(&#xa;)">median</button>
 <button data-key="insert" data-val="quantileSeq(&#xa;,)">qntlSeq</button>
-<button data-key="insert" data-val="var(&#xa;)">var</button>
+<button data-key="insert" data-val="variance(&#xa;)">var</button>
 <button data-key="insert" data-val="std(&#xa;)">std</button>
 
 <button data-key="insert" data-val="min(&#xa;)">min</button>
@@ -394,7 +394,7 @@ if (navigator.serviceWorker && !(navigator.mozApps && navigator.mozApps.installP
 <option data-key="insert" data-val="isNaN(&#xa;)">isNaN</option>
 <option data-key="insert" data-val="hasNumericValue(&#xa;)">hasNumericValue</option>
 </select></div>
-<button data-key="insert" data-val="typeof(&#xa;)">typeof</button>
+<button data-key="insert" data-val="typeOf(&#xa;)">typeOf</button>
 <div class="select"><label for="select-comp">comp/…</label>
 <select id="select-comp"><option>comp/…</option>
 <option data-key="insert" data-val="compareNatural(&#xa;,)">compareNatural</option>
